--- a/answers.ipynb
+++ b/answers.ipynb
@@ -33,10 +33,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Threats: {'Poaching', 'Civil unrest', 'Habitat loss', 'Bycatch in fishing nets'}\n",
+      "Animals Critically Endangered: ['Mountain Gorilla', 'Amur Leopard', 'Vaquita', 'Vaquita', 'Javan Rhino', 'Sumatran Orangutan', 'Hawksbill Turtle', 'Saola']\n",
+      "Species with populations below 50 and animals with unknown population sizes: ['Hawksbill Turtle', 'Saola']\n",
+      "Iberian Lynx  has the largest population size of 415000\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "conservation_data = {\n",
     "    \"Giant Panda\": {\n",
     "        \"Status\": \"Endangered\",\n",
@@ -88,7 +100,29 @@
     "        \"Population\": 94,\n",
     "        \"Threats\": [\"Habitat loss\", \"Poaching\"]\n",
     "    }\n",
-    "}\n"
+    "}\n",
+    "threats = set()\n",
+    "cE = list()\n",
+    "smallPop = list()\n",
+    "largestPop = ''\n",
+    "tempPop = 0\n",
+    "biggestPopAnimal = ''\n",
+    "for animal in conservation_data:\n",
+    "    threats.update(conservation_data[animal]['Threats'])\n",
+    "    if conservation_data[animal][\"Status\"] == \"Critically Endangered\":\n",
+    "        cE.append(animal)\n",
+    "    if conservation_data[animal][\"Population\"] == None:\n",
+    "        smallPop.append(animal)\n",
+    "    elif conservation_data[animal][\"Population\"] < 50:\n",
+    "        cE.append(animal)\n",
+    "    if conservation_data[animal][\"Population\"] != None and conservation_data[animal][\"Population\"] >= tempPop:\n",
+    "        tempPop = conservation_data[animal][\"Population\"]\n",
+    "        largestPop = conservation_data[animal]\n",
+    "        biggestPopAnimal = animal\n",
+    "print(\"Threats include:\", threats)\n",
+    "print(\"Animals Critically Endangered:\", cE)\n",
+    "print(\"Species with populations below 50 and animals with unknown population sizes:\", smallPop)\n",
+    "print(animal, \" has the largest population size of\", tempPop)\n"
    ]
   },
   {
@@ -123,11 +157,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.45\n",
+      "0.7\n",
+      "0.66\n"
+     ]
+    }
+   ],
    "source": [
-    "# example_input = [1882, 400, 321, 24]\n"
+    "example_input = [1882, 400, 321, 24]\n",
+    "def wierdMathFunction (aList):\n",
+    "    if type(aList) != list:\n",
+    "        return \"error 400\"\n",
+    "    #this function uses the simpson Diversity therom to calculate diversity\n",
+    "    total = aList[0]+aList[1]+aList[2]+aList[3]\n",
+    "    D = 1-(((aList[0]/total)**2)+((aList[1]/total)**2)+((aList[2]/total)**2)+((aList[3]/total)**2)) #calculating simpons diversity for aList argument\n",
+    "    D = round(D*100)/100.\n",
+    "    return D\n",
+    "print(wierdMathFunction(example_input))\n",
+    "print(wierdMathFunction([1,2,3,4,5,6,5,7,8]))\n",
+    "print(wierdMathFunction([5,2,2,1]))"
    ]
   },
   {
@@ -152,6 +207,73 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportions of 1s:  0.4\n",
+      "Proportions of 2s:  0.0\n",
+      "Proportions of 3s:  0.0\n",
+      "Proportions of 4s:  0.2\n",
+      "Proportions of 5s:  0.2\n",
+      "Proportions of 6s:  0.2\n",
+      "Three streak: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "def simulation():\n",
+    "    n = int(input())\n",
+    "    three_streak(proportions(dice_simulator(n)))\n",
+    "    \n",
+    "    \n",
+    "def dice_simulator(n):\n",
+    "    if n > 6:\n",
+    "        return(\"The intiger you've selected is out of range. Try again!\")\n",
+    "    dice = list(range(7))\n",
+    "    roll = np.random.choice(dice,n,replace=True)\n",
+    "    return np.array(roll)\n",
+    "def proportions(rolls):\n",
+    "    times = [0,0,0,0,0,0] #list with 6 vals for each roll choice\n",
+    "    for number in rolls:\n",
+    "        if number == 1:\n",
+    "            times[0] +=1\n",
+    "        if number == 2:\n",
+    "            times[1] +=1\n",
+    "        if number == 3:\n",
+    "            times[2] +=1\n",
+    "        if number == 4:\n",
+    "            times[3] +=1\n",
+    "        if number == 5:\n",
+    "            times[4] +=1\n",
+    "        if number == 6:\n",
+    "            times[5] +=1\n",
+    "    total = times[0]+times[1]+times[2]+times[3]+times[4]+times[5]\n",
+    "    print(\"Proportions of 1s: \",times[0]/total)\n",
+    "    print(\"Proportions of 2s: \",times[1]/total)\n",
+    "    print(\"Proportions of 3s: \",times[2]/total)\n",
+    "    print(\"Proportions of 4s: \",times[3]/total)\n",
+    "    print(\"Proportions of 5s: \",times[4]/total)\n",
+    "    print(\"Proportions of 6s: \",times[5]/total)\n",
+    "    return times\n",
+    "\n",
+    "def three_streak(rolls):\n",
+    "    test = 1\n",
+    "    streak = 0\n",
+    "    for number in rolls:\n",
+    "        if number == 3 and number == rolls[test]:\n",
+    "            streak +=1\n",
+    "        test +=1\n",
+    "    print(\"Three streak:\", streak)\n",
+    "simulation()"
+   ]
   }
  ],
  "metadata": {
@@ -170,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
