--- a/answers.ipynb
+++ b/answers.ipynb
@@ -33,17 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Threats: {'Poaching', 'Civil unrest', 'Habitat loss', 'Bycatch in fishing nets'}\n",
-      "Animals Critically Endangered: ['Mountain Gorilla', 'Amur Leopard', 'Vaquita', 'Vaquita', 'Javan Rhino', 'Sumatran Orangutan', 'Hawksbill Turtle', 'Saola']\n",
-      "Species with populations below 50 and animals with unknown population sizes: ['Hawksbill Turtle', 'Saola']\n",
-      "Iberian Lynx  has the largest population size of 415000\n"
+      "Threats include: {'Civil unrest', 'Habitat loss', 'Bycatch in fishing nets', 'Poaching'}\n",
+      "Animals Critically Endangered: {'Javan Rhino', 'Mountain Gorilla', 'Vaquita', 'Amur Leopard', 'Saola', 'Hawksbill Turtle', 'Sumatran Orangutan'}\n",
+      "Species with populations below 50 and animals with unknown population sizes: ['Vaquita', 'Hawksbill Turtle', 'Saola']\n",
+      "African Elephant  has the largest population size of 415000\n"
      ]
     }
    ],
@@ -102,7 +102,7 @@
     "    }\n",
     "}\n",
     "threats = set()\n",
-    "cE = list()\n",
+    "cE = set()\n",
     "smallPop = list()\n",
     "largestPop = ''\n",
     "tempPop = 0\n",
@@ -110,11 +110,11 @@
     "for animal in conservation_data:\n",
     "    threats.update(conservation_data[animal]['Threats'])\n",
     "    if conservation_data[animal][\"Status\"] == \"Critically Endangered\":\n",
-    "        cE.append(animal)\n",
+    "        cE.add(animal)\n",
     "    if conservation_data[animal][\"Population\"] == None:\n",
     "        smallPop.append(animal)\n",
     "    elif conservation_data[animal][\"Population\"] < 50:\n",
-    "        cE.append(animal)\n",
+    "        smallPop.append(animal)\n",
     "    if conservation_data[animal][\"Population\"] != None and conservation_data[animal][\"Population\"] >= tempPop:\n",
     "        tempPop = conservation_data[animal][\"Population\"]\n",
     "        largestPop = conservation_data[animal]\n",
@@ -122,7 +122,7 @@
     "print(\"Threats include:\", threats)\n",
     "print(\"Animals Critically Endangered:\", cE)\n",
     "print(\"Species with populations below 50 and animals with unknown population sizes:\", smallPop)\n",
-    "print(animal, \" has the largest population size of\", tempPop)\n"
+    "print(biggestPopAnimal, \" has the largest population size of\", tempPop)\n"
    ]
   },
   {
@@ -157,32 +157,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.45\n",
-      "0.7\n",
-      "0.66\n"
+      "[5, 2, 2, 1]\n",
+      "0.66\n",
+      "[1, 2, 3, 4, 5, 6, 5, 7, 8]\n",
+      "-1.29\n"
      ]
     }
    ],
    "source": [
-    "example_input = [1882, 400, 321, 24]\n",
+    "example_input = [5,2,1.9,1]\n",
     "def wierdMathFunction (aList):\n",
     "    if type(aList) != list:\n",
     "        return \"error 400\"\n",
+    "    index = 0\n",
+    "    for each in aList:\n",
+    "        if type(each) == int:\n",
+    "            pass\n",
+    "        elif type(each) != int and type(each) == float:\n",
+    "            each = round(each)\n",
+    "            aList[index] = each\n",
+    "        else:\n",
+    "            return \"error 400\"\n",
+    "        index += 1 \n",
+    "    print(aList)\n",
     "    #this function uses the simpson Diversity therom to calculate diversity\n",
-    "    total = aList[0]+aList[1]+aList[2]+aList[3]\n",
-    "    D = 1-(((aList[0]/total)**2)+((aList[1]/total)**2)+((aList[2]/total)**2)+((aList[3]/total)**2)) #calculating simpons diversity for aList argument\n",
+    "    # total = aList[0]+aList[1]+aList[2]+aList[3]\n",
+    "    # D = 1-(((aList[0]/total)**2)+((aList[1]/total)**2)+((aList[2]/total)**2)+((aList[3]/total)**2)) #calculating simpons diversity for aList argument\n",
+    "    D = 1\n",
+    "    for number in aList:\n",
+    "        D = D - (number/10)**2\n",
     "    D = round(D*100)/100.\n",
     "    return D\n",
     "print(wierdMathFunction(example_input))\n",
-    "print(wierdMathFunction([1,2,3,4,5,6,5,7,8]))\n",
-    "print(wierdMathFunction([5,2,2,1]))"
+    "print(wierdMathFunction([1,2,3,4,5,6,5,7,8]))"
    ]
   },
   {
@@ -210,35 +224,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Proportions of 1s:  0.4\n",
+      "Value of n = 4 \n",
+      "\n",
+      "[1 5 2 1]\n",
+      "Proportions of 1s:  0.5\n",
+      "Proportions of 2s:  0.25\n",
+      "Proportions of 3s:  0.0\n",
+      "Proportions of 4s:  0.0\n",
+      "Proportions of 5s:  0.25\n",
+      "Proportions of 6s:  0.0\n",
+      "Three streak: 0 \n",
+      "\n",
+      "[4 4 5 5]\n",
+      "Proportions of 1s:  0.0\n",
       "Proportions of 2s:  0.0\n",
       "Proportions of 3s:  0.0\n",
-      "Proportions of 4s:  0.2\n",
-      "Proportions of 5s:  0.2\n",
-      "Proportions of 6s:  0.2\n",
-      "Three streak: 0\n"
+      "Proportions of 4s:  0.5\n",
+      "Proportions of 5s:  0.5\n",
+      "Proportions of 6s:  0.0\n",
+      "Three streak: 0 \n",
+      "\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "def simulation():\n",
-    "    n = int(input())\n",
-    "    three_streak(proportions(dice_simulator(n)))\n",
+    "\n",
+    "timesRun = 2\n",
+    "n = 4\n",
+    "\n",
+    "def simulation(n):\n",
+    "    print(\"Value of n =\", n, \"\\n\")\n",
+    "    for all in list(range(1,first+1)):\n",
+    "        paramater = dice_simulator(n)\n",
+    "        proportions(paramater)\n",
+    "        three_streak(paramater)\n",
     "    \n",
     "    \n",
     "def dice_simulator(n):\n",
-    "    if n > 6:\n",
-    "        return(\"The intiger you've selected is out of range. Try again!\")\n",
-    "    dice = list(range(7))\n",
+    "    dice = list(range(1, 7))\n",
     "    roll = np.random.choice(dice,n,replace=True)\n",
+    "    print(roll)\n",
     "    return np.array(roll)\n",
     "def proportions(rolls):\n",
     "    times = [0,0,0,0,0,0] #list with 6 vals for each roll choice\n",
@@ -255,7 +288,7 @@
     "            times[4] +=1\n",
     "        if number == 6:\n",
     "            times[5] +=1\n",
-    "    total = times[0]+times[1]+times[2]+times[3]+times[4]+times[5]\n",
+    "    total = len(rolls)\n",
     "    print(\"Proportions of 1s: \",times[0]/total)\n",
     "    print(\"Proportions of 2s: \",times[1]/total)\n",
     "    print(\"Proportions of 3s: \",times[2]/total)\n",
@@ -267,12 +300,22 @@
     "def three_streak(rolls):\n",
     "    test = 1\n",
     "    streak = 0\n",
+    "    streakRecord = [0]\n",
     "    for number in rolls:\n",
-    "        if number == 3 and number == rolls[test]:\n",
-    "            streak +=1\n",
+    "        if number == 3:\n",
+    "            if test == len(rolls):\n",
+    "                streakRecord.append(streak)\n",
+    "                break\n",
+    "            elif number == 3 and number == rolls[test]:\n",
+    "                streak +=1\n",
+    "            else:\n",
+    "                streakRecord.append(streak)\n",
+    "                streak = 0\n",
     "        test +=1\n",
-    "    print(\"Three streak:\", streak)\n",
-    "simulation()"
+    "    bestStreak = max(streakRecord)\n",
+    "    print(\"Three streak:\", bestStreak,\"\\n\")\n",
+    "\n",
+    "simulation(n)"
    ]
   }
  ],
